--- a/example/package.json
+++ b/example/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "example",
+  "name": "prisma-extension-streamdal-example",
   "scripts": {
     "dev": "ts-node --transpile-only index.ts"
   },
   "dependencies": {
-    "@prisma/client": "^4.15.0"
+    "@prisma/client": "^5.7.0"
   },
   "devDependencies": {
-    "prisma": "^4.15.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.0"
+    "prisma": "^5.7.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
