--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "cp package.json ./dist/package.json && tsc",
     "lint": "eslint src --ext .ts --fix",
     "prepare": "husky install"
   },
