--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc && cp package.json ./dist/package.json",
-    "lint": "eslint src --ext .ts --fix",
-    "prepare": "husky install"
+    "lint": "eslint src --ext .ts --fix"
   },
   "peerDependencies": {
     "@prisma/client": "latest",
