--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc && cp package.json ./dist/package.json && cp README.md ./dist/README.md",
+    "build": "tsc && cp package.json ./dist/package.json && cp README.md ./dist/README.md && cp -R assets ./dist/assets",
     "lint": "eslint src --ext .ts --fix"
   },
   "peerDependencies": {
