--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,18 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "lib": ["ES2016"],
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "module": "NodeNext",
+    "target": "es2020",
+
     "strict": true,
-    "skipDefaultLibCheck": true,
-    "skipLibCheck": false,
-    "declaration": true,
-    "outDir": "./dist"
+    "noFallthroughCasesInSwitch": true,
+    "experimentalDecorators": true,
+    "noUnusedLocals": true,
+    "skipLibCheck": true,
+    "moduleResolution": "NodeNext",
+    "esModuleInterop": true,
+    "sourceMap": true,
+    "outDir": "./build",
+    "declaration": true
   },
   "include": ["src/**/*.ts"]
 }
