--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,17 @@
 name: Streamdal Prisma Extension - Release
+
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - main
+
 jobs:
   build:
+    name: Tag and Release
+    if: ${{ !contains(github.event.head_commit.message, 'norelease') }}
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@main
 
       - name: Set up node
         uses: actions/setup-node@v1
@@ -18,11 +22,43 @@ jobs:
       - name: Install dependencies
         run: npm install --force
 
+      - name: Generate new tag (dry run)
+        uses: mathieudutour/github-tag-action@v6.1
+        id: get_new_version
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          dry_run: true
+          fetch_all_tags: true
+
+      - name: Update npm package version
+        run: |
+          npm --no-git-tag-version version ${{ steps.get_new_version.outputs.new_version }}
+
+      - name: Pull latest changes
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git pull --depth=10
+
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        id: auto_commit
+        with:
+          commit_message: Bumped npm package version to ${{ steps.get_new_version.outputs.new_version }}
+
+      - name: Create tag
+        uses: mathieudutour/github-tag-action@v6.1
+        id: create_tag
+        with:
+          commit_sha: ${{ steps.auto_commit.outputs.commit_hash }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          custom_tag: ${{ steps.get_new_version.outputs.new_version }}
+
       - name: Build
         run: npm run build
 
       - name: Release to npm
-        working-directory: ./dist
+        working-directory: ./build
         run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
