--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "peerDependencies": {
     "@prisma/client": "^5.11.0",
-    "@streamdal/node-sdk": "^0.2.19"
+    "@streamdal/node-sdk": "0.2.27"
   },
   "devDependencies": {
     "@prisma/extension-accelerate": "^0.6.2",
